--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio-app",
+  "homepage": "http://henricktambourou.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
